Complete version 1; In this version increamenting time step doesn't need to rebuild SMT problem from the first, but weuse incremental SMT problem which expriments show we have imporvement with this method

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -46,7 +46,7 @@ all: Modaber
 Modaber: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross G++ Linker'
-	g++  -o "Modaber" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L/usr/local/lib -o "Modaber" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
