gitignore is improved

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-*.tar.gz
-*.rar
-test.groups
-solution
+*
+!*/
+!Lingeling/*
+!myRun/*
+!src/*
+!src/*/*
+!src/*/*/*
+!TranslateToSASPlus/*
+!TranslateToSASPlus/*/*
+!TranslateToSASPlus/*/*/*
+!VALfiles/*
+!VALfiles/*/*
+!VALfiles/*/*/*
+!.gitignore
+
